--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
+/*
 buildscript {
     repositories {
         jcenter()
@@ -11,9 +11,23 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
+*/
+
+
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+
+        classpath 'com.android.tools.build:gradle:7.3.1'
+    }
+}
 
 allprojects {
     repositories {
+        google()
         jcenter()
     }
 }
